<resources>
    <string name="app_name">CarStream</string>
    <string name="car_service_name">CarStream</string>
    <string name="app_name_player">CarStream player</string>
    <string name="channel_name">CarStream Channel</string>
    <string name="warning_title">WARNING !!!</string>
    <string name="warning_body">Watching videos while driving can cause car crashes. By dismissing this warning, you agree that you are aware of and responsible for the consequences of doing this. Neither the developer of this app nor Google nor the manufacturer of this equipment nor the manufacturer of this car is responsible for any accidents caused due to your negligence. You can switch to background playback by clicking on the media icon instead.</string>
    <string name="warning_accept_button">I understand the risks</string>
    <string name="url_edittext_phone_app">URL :</string>
    <string name="about_page">About</string>
    <string name="webview_back">Back</string>
    <string name="refresh_page">Refresh</string>
    <string name="night_mode">Night Mode</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="voice_search">Voice search</string>
    <string name="search">Search</string>
    <string name="fullscreen">FullScreen</string>
    <string name="home">Home</string>
    <string name="aspect_ratio_contain">Contain</string>
    <string name="aspect_ratio_fill">Fill</string>
    <string name="aspect_ratio_cover">Cover</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="add_bookmark">Add current site</string>
    <string name="version">Version </string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_car_category">Car settings</string>
    <string name="settings_car_disable_notifications_title">Disable notifications</string>
    <string name="settings_car_disable_notifications_summary">Disable head-up notifications in Android Auto</string>

</resources>
